[gd_scene load_steps=9 format=3 uid="uid://damsrqwlonlca"]

[ext_resource type="Script" uid="uid://cju4lvl11s0vj" path="res://scenes/tank.gd" id="1_4piap"]
[ext_resource type="PackedScene" uid="uid://7fcqwu6k3e4x" path="res://assets/tank.glb" id="2_ibak5"]
[ext_resource type="Script" uid="uid://d04mbnk6srgin" path="res://scenes/tank_camera.gd" id="3_ikjma"]
[ext_resource type="AudioStream" uid="uid://ctah1rvpv26qm" path="res://assets/enginesound.ogg" id="4_k4vtj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r72yb"]
albedo_color = Color(0.288518, 0.288518, 0.288518, 1)

[sub_resource type="PrismMesh" id="PrismMesh_xn72j"]
size = Vector3(0.3, 0.3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_j31oi"]
size = Vector3(4, 2, 6)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_x5enk"]
properties/0/path = NodePath(".:engine_force")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:brake")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:steering")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:mass")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:linear_velocity")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:angular_velocity")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:rotation")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("tank/Turret:rotation")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("tank/Main/RotationPoint/RotationPoint2/Camera3D:position")
properties/9/spawn = false
properties/9/replication_mode = 0
properties/10/path = NodePath("tank/Main/RotationPoint/RotationPoint2/Camera3D:rotation")
properties/10/spawn = false
properties/10/replication_mode = 0
properties/11/path = NodePath("tank/Main/RotationPoint:rotation")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath("tank/Main/RotationPoint/RotationPoint2:rotation")
properties/12/spawn = true
properties/12/replication_mode = 1
properties/13/path = NodePath(".:target_position")
properties/13/spawn = true
properties/13/replication_mode = 1

[node name="Tank" type="VehicleBody3D"]
collision_layer = 0
mass = 1000.0
script = ExtResource("1_4piap")

[node name="tank" parent="." instance=ExtResource("2_ibak5")]

[node name="BarrelRotation" type="Node3D" parent="tank/Turret" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.94)

[node name="Barrel" type="CSGCylinder3D" parent="tank/Turret/BarrelRotation"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 1.47036)
radius = 0.1
height = 5.0
material = SubResource("StandardMaterial3D_r72yb")

[node name="BulletSpawn" type="Node3D" parent="tank/Turret/BarrelRotation"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0154204, 4.03828)

[node name="RotationPoint" type="Node3D" parent="tank/Main" index="0"]
unique_name_in_owner = true

[node name="RotationPoint2" type="Node3D" parent="tank/Main/RotationPoint"]
unique_name_in_owner = true

[node name="TankCamera" type="Camera3D" parent="tank/Main/RotationPoint/RotationPoint2"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 4.11711, -6.8434)
script = ExtResource("3_ikjma")

[node name="CameraIndicator" type="MeshInstance3D" parent="tank/Main/RotationPoint/RotationPoint2/TankCamera"]
transform = Transform3D(1, -8.74228e-08, 8.74228e-08, 8.74228e-08, -4.37114e-08, -1, 8.74228e-08, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("PrismMesh_xn72j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_j31oi")

[node name="VehicleWheel3D" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, -2)
use_as_traction = true

[node name="VehicleWheel3D2" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, 2)
use_as_traction = true
use_as_steering = true

[node name="VehicleWheel3D3" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, 2)
use_as_traction = true
use_as_steering = true

[node name="VehicleWheel3D4" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.5, -2)
use_as_traction = true

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_k4vtj")
autoplay = true
parameters/looping = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_x5enk")

[editable path="tank"]
